<resources>
    <string name="app_name">Chess</string>
    <string name="play_vs_ai">Play vs AI</string>
    <string name="play_vs_friend">Play against a friend</string>
    <string name="settings">Settings</string>
    <string name="white_turn">White\'s turn</string>
    <string name="black_turn">Black\'s turn</string>
    <string name="white_won">White won!</string>
    <string name="black_won">Black won!</string>
    <string name="rotate_black_pieces">Rotate black pieces 180 degrees in two players mode</string>
    <string name="ai_difficulty">AI difficulty</string>
    <string name="app_language">App language</string>
    <string name="difficulty1">1 - too easy</string>
    <string name="difficulty2">2 - very easy</string>
    <string name="difficulty3">3 - easy</string>
    <string name="difficulty4">4 - normal</string>
    <string name="difficulty5">5 - hard (slow)</string>
    <string name="highlight_last_move">Highlight last move</string>
    <string name="highlight_legal_moves">Highlight legal moves</string>
</resources>
