<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:hapticFeedbackEnabled="false"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="20dp"
        android:text="@string/settings"
        android:textSize="30dp" />

    <Switch
        android:id="@+id/rotate_black_pieces"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/rotate_black_pieces"
        android:textSize="18sp" />

    <Switch
        android:id="@+id/highlight_last_move"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/highlight_last_move"
        android:textSize="18sp" />

    <Switch
        android:id="@+id/highlight_legal_moves"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/highlight_legal_moves"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ai_difficulty"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/ai_spinner"
            android:layout_width="150dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/app_language"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/language_spinner"
            android:layout_width="150dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>